--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,7 +39,7 @@
                 <key>CFBundleTypeRole</key>
                 <string>Editor</string>
                 <key>CFBundleURLName</key>
-                <string>hms.com</string>
+                <string>estuairesante.com</string>
                 <key>CFBundleURLSchemes</key>
                 <array>
                      <string>myHMSApp</string>
